[8.0.0.0] k8s/[8.2]/ingress-example-k8s-latest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"

spec:
  rules:
  - host: alicek106.example.com       # 해당 도메인 이름으로 접근하는 요청에 대해서 처리 규칙을 적용
    http:
      paths:
      - path: /echo-hostname          # 경로에 대한 요청 라우팅 
        pathType: Prefix
        backend:
          service:
            name: hostname-service    # path로 들어온 요청이 전달될 서비스와 포트이다.
            port:
              number: 80
